--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".interfaceadapter.presenter.ListPresenter"
+                android:name=".interfaceadapter.activity.ListActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".interfaceadapter.presenter.DetailPresenter">
+        <activity android:name=".interfaceadapter.activity.DetailActivity">
         </activity>
     </application>
 
